src/tests/testfiles/variable-declarations/8.txt
Error at 2:9: Variable initialization must have the same type (have int and char[])
int j = "hello"; // error
    ^
